--- a/4. JS Front-End/HTML & CSS/3. CSS Box Model and Typography/6.styles.css
+++ b/4. JS Front-End/HTML & CSS/3. CSS Box Model and Typography/6.styles.css
@@ -1,25 +1,23 @@
 div {
-    width: 300px;
-    padding: 20px;
-    margin: 20px;
-    font-size: 18px;
+    padding: 1em;
+    margin-bottom: 1em;
 }
 
-.solid-border {
-    border: 3px solid black;
+.solid {
+    border: 4px solid black;
 }
 
-.dashed-border {
-    border: 3px dashed black;
+.dashed {
+    border: 3px dashed #333;
 }
 
-.dotted-border {
-    border: 3px dotted black;
+.dotted {
+    border: 2px dotted #666;
 }
 
-.mixed-border {
-    border-top: 3px dashed black;
-    border-bottom: 3px dashed black;
-    border-left: 3px solid black;
-    border-right: 3px solid black;
+.mixed {
+    border-top: 3px dashed #333;
+    border-bottom: 3px dashed #333;
+    border-left: 4px solid #000;
+    border-right: 4px solid #000;
 }
